--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "473project1",
+  "name": "473project",
   "version": "1.0.0",
-  "description": "Team Unlamented Epicurean's Project 1 for CPSC 473 with Professor Avery",
-  "main": "",
-  "author": "Bryan Bonner, Julio Cruz, James Mitchell, Yui Tamaki, Jimmy Vo",
-  "license": "UNLICENSED",
+  "description": "Share excuses",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Bryan",
+  "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
-    "consolidate": "^0.14.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "express-session": "^1.14.1",
+    "express-messages": "^1.0.1",
+    "express-validator": "^2.21.0",
+    "messages": "0.0.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
     "passport": "^0.3.2",
-    "passport-local-mongoose": "^4.0.0",
-    "path": "^0.12.7",
-    "swig": "^1.4.2"
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0"
   }
 }
