--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-messages": "^1.0.1",
+    "express-session": "^1.14.1",
     "express-validator": "^2.21.0",
     "messages": "0.0.0",
     "mongodb": "^2.2.11",
