--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
     "express-messages": "^1.0.1",
     "express-session": "^1.14.1",
     "express-validator": "^2.21.0",
