added in code for tag counting and to pull posts based on top Nav Bar distinctions

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bryan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
